<resources>
    <string name="app_name">Grapefruit Weather</string>
    <string name="city_name">Name of the city</string>
    <string name="placeholder_temp">--C</string>
    <string name="placeholder_weather_status_icon">Current weather status icon</string>
    <string name="add_new_location">Add new location</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="app_logo">App logo</string>
    <string name="disclaimer">Grapefruit Weather uses OpenWeatherMap API services to fetch weather information and perform location geocoding. To proceed, please provide an OWM API key (that can be generated by using the link below:</string>
    <string name="OWM_Register_URL"><a href="https://home.openweathermap.org/api_keys\">https://home.openweathermap.org/api_keys</a></string>
    <string name="api_key">API Key</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
</resources>